Other instructor updates

--- a/classes/florida/index.html
+++ b/classes/florida/index.html
@@ -34,7 +34,7 @@
     <div class="history-container classes-container instructor-container">
    <h1 style="color:rgb(132, 37, 37);">Jason Eaton</h1>
    <p>
-    <br>Website: <a href="https:/www.AtomicTaiChi.com">www.AtomicTaiChi.com.com</a>
+    <br>Website: <a href="https:/www.AtomicTaiChi.com">www.AtomicTaiChi.com</a>
     <br>Email: <a href="mailto:jason@atomictaiji.com">jason@atomictaiji.com</a>
     <br>Location: Palm Bay, FL
   </p>
