--- a/classes/grenoble/index.html
+++ b/classes/grenoble/index.html
@@ -32,22 +32,33 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Eric Ziegler</h1></a>
+      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Senior Instructor: Eric Ziegler</h1></a>
         <div id="tonidemoulin-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/ericziegler.jpg">
-          <h3>Eric Ziegler</h3>
-          <p>I was born in Franche-Comte, a beautiful region annexed to France three centuries ago by the Sun King, at the time he was also claiming the region of Louisiana in North America and learning how to use chopsticks and write Chinese characters from Shen Fu-Tsung. In 1985, while working in Chicago as a physicist, it was my turn to discover another Chinese art called Tai Chi Chuan. I joined a class at the Dance Center of Columbia College and then became a regular student of Hau Kum and Peter Kneip. They taught me the Yang form of Cheng Man-Ching among other styles and introduced me to the Chinese culture in general.</p>
-
-          <p>A couple of years later I had the great experience of taking a 10-week trip to southern China alone. This adventure served as a transition before returning to France. In 1988 I joined a Tai Chi class in Lyon taught by Jean-Claude Sapin, a French philosopher who studied in Taiwan, and later on found a class in Grenoble practicing the Yang form from the Tung family. In 1990 my friends from Chicago visited Grenoble and taught us a fan form from Taiwan. Until 1992, birth of my son Camille, I was able to study in Paris with Anya Meot and to attend Tung Kai Ying's workshops. 1996 was an important event, as I managed to visit Burma after several unsuccessful attempts. I had the chance to meet Mr Chan, a senior Tai Chi and Qi Gong master, and to hear the Nobel laureate Aug San Suu Kyi speak about nonviolence and democracy. Back to the US (Berkeley, CA) in 1997 for a sabbatical year, I had the opportunity to study the sword form with Marybeth Rice, a former student of Wu Tai-Yeh.</p>
-
-          <p>2000 was the year of my first workshop with Alex Dong in Athens, found by typing the keywords "tai" &amp; "chi" on the Internet. Alex's personality and teaching skills attracted me immediately. Since then, whenever possible, I follow his teaching through his workshops organized in Greece, UK, and the US. The rest of the time I attend a regular tai-chi class in the Grenoble area, taught by Daniel Carriau, a long-term student of Tung Kai Ying. In 2008 Alex Dong encouraged my plan to begin teaching. So I started a beginner's class in my village and another one in Grenoble. The latter class is for elderly people. My oldest students, 94 and 90 years old, are examples for everyone. The art of repeating and of adapting are helping me develop patience. I find teaching an exciting experience and a true opportunity to improve my own practice. At times, students are sharing their experience and the effect of Tai Chi on their daily life. These moments are particularly rewarding. Besides Tai Chi, I have been practicing Hatha Yoga for 12 years and Vipassana meditation, Burmese style, for 5 years. The regular practice of these various ancient arts helps me find balance in our "modern" life.</p>
+          <h3>Eric Ziegler: biography about tai-chi-chuan</h3>
+          <p>Born in 1955, I discovered tai-chi-chuan in Chicago at the age of 30, while working as a physicist.
+            <br>My first tai-chi classes with Hau Kum Kneipp at the Dance Center of Columbia College focused on Cheng Man-Ching’s Yang form, among other practices.
+            <br>A few years later, I went on my own for a ten-week trip to southern China, which gave me an insight into Chinese culture.
+            <br>Back in France in 1988, I joined a Tai Chi class in Lyon taught by Jean-Claude Sapin, a French philosopher who had studied in Taiwan,
+            <br> then found a class in the Grenoble region (south-east France) practicing the Yang form of the Tung family.
+            <br>In 1990, Hau Kum came to Grenoble to teach a Shaolin fan form. At the same time, I had the opportunity to take part in Tung Kai Ying’s workshops in Paris.
+            <br>Returning to the USA (Berkeley, CA) in 1997 for a sabbatical year, I studied the sword form with Marybeth Rice, a former student of Wu Tai-Yeh.
+            <br>Back in Grenoble, I took a regular tai-chi course with Daniel Carriau, a long-time student of Tung Kai Ying.
+            <br>In 2000, I met Alex Dong for the first time in Athens. I immediately felt inspired by Alex’s personality and teaching skills, and knew that he would help me evolve in the direction I wanted.
+            <br>Shortly afterwards, I decided to follow only his teaching, taking part in various workshops organized in Greece, the UK, Italy and the USA.
+            <br>In 2008, Alex Dong encouraged me to start teaching. So, I started a beginner’s course in my village, then another one in Grenoble for people in their 80’s and 90’s. I then started giving a few classes at the research institute I was working for.
+            <br>In 2016, I was offered the title of senior instructor of the Dong Ying Jie Taiji Legacy.
+            <br>In 2021, retirement gave me the opportunity to devote more time to a variety of mindful activities, including tai-chi-chuan.
+            <br>Teaching is an exciting experience and a real opportunity to improve my own practice.
+            <br>It is also particularly rewarding when students share their experience and the effect of tai-chi in their daily lives.
+          </p>
         </div>
-      <p>Association Emouvement
-      <br>Monday: 17:15- 19:00, ESRF, 71 avenue des martyrs, 38000 Grenoble; 
-      <br>Tuesday: 8:45- 9:45, Maison des Habitants, Centre Ville, 2 rue du Vieux Temple, 38000 Grenoble; 
-      <br>Thursday 20:15- 21:45, Salle Polyvalente, Le Village, 38950 Quaix en Chartreuse
-      <br>Address: 50 place Victor Jaillet, 38950 Quaix en Chartreuse
-      <br>Tel. +33 (0)476568109 or Email: <a href="mailto:moming@me.com">moming@me.com</a></p>
+      <p>Association Emouvement</p>
+      <p><b>Address:</b> 50 place Victor Jaillet, 38950 Quaix en Chartreuse
+      <br><b>Website:</b> <a href="https://www.ericziegler.fr">www.ericziegler.fr</a>
+      <br><b>Phone:</b> +33 665049503
+      <br><b>Email:</b> <a href="mailto:moming@me.com">moming@me.com</a>
+    </p>
     </div>
   </section>
 
