Added Instructor Pete

--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -82,6 +82,21 @@
       </p>
     </div>
 
+
+    <div class="history-container classes-container instructor-container">
+      <h1>Instructor: Pete Angelis</h1></a>
+      <p>Tai Chi Mode</p>
+        <p>Location: Ippokratous 13
+        <br>Ilioupoli, Athens Greece
+        <p>Phone: +30 697 338 2801
+        <br>Email: <a href="mailto:taichimode.on@gmail.com">taichimode.on@gmail.com</a>
+        <br>Website: <a href="https://www.taichimode.com">taichimode.com</a>
+        <br>Facebook: <a href="https://facebook.com/TaiChiMode">TaiChiMode</a>
+        <br>Instagram: <a href="https://www.instagram.com/taichi_mode">taichi_mode</a>
+        <br>TikTok: <a href="https://www.tiktok.com/@taichimode">taichimode</a>
+      </p>
+    </div>
+
     <div class="history-container classes-container instructor-container">
       <h1>Athens-Certified Instructor Mixalis Kiminas.</h1>
       <p>Koukaki Tai Chi Association.</p>
