--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -77,7 +77,7 @@
       <h1>Instructor: Argyris Tsepelikas</h1></a>
       <p>Exarchia, Athens Greece</p>
       <p>Phone: 6987337384
-        <br>Website: <a href="www.taichiqigong.gr">www.taichiqigong.gr</a>
+        <br>Website: <a href="https://www.taichiqigong.gr">www.taichiqigong.gr</a>
         <br>fb: @taichiexarchia 
       </p>
     </div>
