--- a/classes/santabarbara/index.html
+++ b/classes/santabarbara/index.html
@@ -40,11 +40,11 @@
 
           <p>Toni started Dong Style Taiji academies in Santa Barbara, San Diego and Portland, OR. and has given USA workshops in Burbank, Whittier, Big Bear, Eureka, Seattle, and Portland. European workshops have been in Tonsberg, Norway and Prague, Czech Republic. Toni encourages other students by example to be a good senior student, helping others on this path and attending as many workshops, camps and intensives as possible with Master Alex.</p>
         </div>
-
-        <p><b>Santa Barbara Tai Chi & Qigong</b></p>
+    
+        <p><strong>Santa Barbara Tai Chi & Qigong</strong></p>
         <p>Toni DeMoulin has 53 years of experience teaching Dong Style Taijiquan.
 <br>Studied 30 years with Master Tung Kai Ying and 23 years with Master Alex Dong.
-<br>She has taught students in many European and US cities as well as teaching Chinese students for 3 years while  living in Beijing. 
+<br>She has taught students in many European and US cities as well as teaching Chinese students for 3 years while living in Beijing. 
 <br>Toni continues to study Dong Style Taijiquan through Master Alex Dong's worldwide workshops and weekly zoom classes.
 
 <p>All Santa Barbara (California) classes are outside on a wooden deck
@@ -63,7 +63,7 @@
   <p><b>Contact</b>
     <br>Toni DeMoulin
       <br>Phone: 805-570-6194
-      <br>Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a></p>
+      <br>Email: <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
     </div>
   </section>
 
