--- a/classes/index.html
+++ b/classes/index.html
@@ -53,7 +53,7 @@
         <li><a href="windham/">Windham, New Hampshire</a></li>
         <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="yelm/">Yelm, Washington</a></li>
-        <li><a href="china/">Santa Barbara, California</a></li>
+        <li><a href="santabarbara/">Santa Barbara, California</a></li>
       </ul>
       
       <h2>Canada</h2>
