--- a/workshops/index.html
+++ b/workshops/index.html
@@ -34,103 +34,6 @@
   <section class="history workshops link-container">
     <div class="history-container">
 
-<a href="#montreal" class="animated_popup">
-
-        <h1>Dolbeau-Mistassini, Québec/Canada</h1>
-
-      </a>
-
-      <h2>Aug. 2 to 5, 2024</h2>
-
-      <div id="montreal" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Dolbeau-Mistassini, Québec/Canada</h3>
-
-        <p>Aug. 2 to 5, 2024</p>
-
-        <p>Contact <a href="mailto:guylaine@planeterres.com">guylaine@planeterres.com</a></p>
-
-        <p>Workshop content: Fundamental Qigong, Forms, Energy and Weapons</p>
-
-      </div>
-
-
-      <a href="#abcde" class="animated_popup">
-
-        <h1>Olympia, Washington</h1>
-
-      </a>
-
-      <h2>August 16 to 18, 2024</h2>
-
-      <div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Olympia, Washington</h3>
-
-        <p>August 16 to 18, 2024</p>
-
-        <p>Contact <a href="mailto:dmh1224@gmail.com">dmh1224@gmail.com</a></p>
-
-        <p>Workshop content: Qigong, Forms and Weapons practice</p>
-
-        <p>$60 per class--$50 pre-register</p>
-
-        <p>$250 for all five classes--$220 pre-register</p>
-
-        <p>Pre-register by August 1 2024 with a minimum of 50% deposit. </p>
-
-        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for payment details</p>
-
-      </div>
-
-
-
-
-<a href="#Newham" class="animated_popup">
-
-        <h1>New Hampshire</h1>
-
-      </a>
-
-      <h2>Sept. 20th to 22nd 2024</h2>
-
-      <div id="Newham" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>New Hampshire</h3>
-
-        <p>Sept. 20th to 22 2024</p>
-
-        <p>Contact Alex Dong for more information: <a href="mailto:janetbriggs79@gmail.com">janetbriggs79@gmail.com</a></p>
-
-        <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
-
-      </div>
-
-
-
-  <a href="#upstate" class="animated_popup">
-
-        <h1>Upstate New York</h1>
-
-      </a>
-
-      <h2>Oct. 3rd to 6th 2024</h2>
-
-      <div id="upstate" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Upstate New York</h3>
-
-        <p>Oct. 3rd to 6th 2024</p>
-
-        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
-
-        <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
-
-        <p><a href="Rosendale2024.docx">Download form here</a></p>
-
-      </div>
-
-
       <a href="#cz7" class="animated_popup">
 
         <h1>Athens, Greece</h1>
@@ -215,7 +118,87 @@
 
       </div>
 
+      <a href="#honolulu" class="animated_popup">
 
+        <h1>Honolulu, HI</h1>
+
+      </a>
+
+      <h2>Mar. 1 and 2, 2025</h2>
+
+      <div id="honolulu" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Honolulu, HI</h3>
+
+        <p>Mar. 1 and 2, 2025</p>
+
+        <p>Contact <a href="mailto:bolibolj001@hawaii.rr.com">bolibolj001@hawaii.rr.com </a></p>
+
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Slow Forms, Fast Forms. Hao/Kaihe and Sword.</p>
+
+      </div>
+
+ <a href="#montreal" class="animated_popup">
+
+        <h1>Montreal, Canada</h1>
+
+      </a>
+
+      <h2>April. 11 to 13, 2025</h2>
+
+      <div id="montreal" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Montreal, Canada</h3>
+
+        <p>April. 11 to 13, 2025</p>
+
+        <p>Contact <a href="mailto:grace@taichiclub.com:">grace@taichiclub.com </a></p>
+
+        <p>Workshop content: Slow Forms, Fast Forms and Push Hands.</p>
+
+      </div>
+
+
+<a href="#santa" class="animated_popup">
+
+        <h1>Santa Barbara, CA</h1>
+
+      </a>
+
+      <h2>May. 2 to 4, 2025</h2>
+
+      <div id="santa" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Santa Barbara, CA</h3>
+
+        <p>May. 2 to 4, 2025</p>
+
+        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
+
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Slow Forms, Push Hands and Partner work.</p>
+
+      </div>
+
+
+ <a href="#Siena" class="animated_popup">
+
+        <h1>Siena, Italy</h1>
+
+      </a>
+
+      <h2>May 24 to 28, 2025</h2>
+
+      <div id="Siena" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Siena, Italy</h3>
+
+        <p>May 24 to 28, 2025</p>
+
+        <p>Contact <a href="mailto:claudio.dongtaichi@gmail.com">claudio.dongtaichi@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Push Hands, Energy and Structural work</p>
+
+      </div>
 
 
       <a href="#copen2025" class="animated_popup">
@@ -235,6 +218,103 @@
         <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
 
         <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
+
+      </div>
+
+      <a href="#cz11" class="animated_popup"> 
+
+        <h1></h1>
+
+      </a>
+
+      <h2>June 7 to 8, 2025</h2>
+
+      <div id="cz11" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Lund, Sweden</h3>
+
+        <p>June 7 to 8, 2025</p>
+
+        <p>Contact <a href="mailto:christina.rhodin@icloud.com">christina.rhodin@icloud.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms and Push Hands</p>
+
+      </div>
+
+
+
+
+<a href="#idaho" class="animated_popup">
+
+        <h1>Boise, ID</h1>
+
+      </a>
+
+      <h2>June 20 to 22, 2025</h2>
+
+      <div id="idaho" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Boise ID</h3>
+
+        <p>June 20 to 22, 2025</p>
+
+        <p>Contact<a href="mailto:">Lrbearg@gmail.com<a href="mailto:Lrbearg@gmail.com">Lrbearg@gmail.com</a></p>
+
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Slow Forms, Push Hands and Fast Form.</p>
+
+      </div>
+
+
+
+
+<a href="#dolbeau" class="animated_popup">
+
+        <h1>Dolbeau, Canada</h1>
+
+      </a>
+
+      <h2>August 1 to 3, 2025</h2>
+
+      <div id="dolbeau" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Dolbeau, Canada</h3>
+
+        <p>August 1 to 3, 2025</p>
+
+        <p>Contact <a href="mailto:guylainemireault@taichilaval.com">guylainemireault@taichilaval.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms and Push Hands</p>
+
+      </div>
+
+
+
+
+ <a href="#abcde" class="animated_popup">
+
+        <h1>Olympia, Washington</h1>
+
+      </a>
+
+      <h2>August 8 to 10, 2025</h2>
+
+      <div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Olympia, Washington</h3>
+
+        <p>August 8 to 10, 2025</p>
+
+        <p>Contact <a href="mailto:barbaraheard@msn.com">barbaraheard@msn.com</a></p>
+
+        <p>Workshop content: Qigong, Forms and Weapons practice</p>
+
+        <p>$60 per class--$50 pre-registered</p>
+
+        <p>$275 for all five classes--$250 pre-register</p>
+
+        <p>Pre-register by July 15 2025 with a minimum of 25% non-refundable deposit. </p>
+
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for payment details</p>
 
       </div>
 
@@ -258,7 +338,48 @@
         <p>Workshop content: Qigongs, All Forms, Applications and Push Hands</p>
 
       </div>
-      
+
+      <a href="#cz9" class="animated_popup">
+
+        <h1>Kongebakken 19, 4000 Roskilde, Denmark</h1>
+
+      </a>
+
+      <h2>Oct. 4 to 5, 2025</h2>
+
+      <div id="cz9" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Kongebakken 19, 4000 Roskilde, Denmark</h3>
+
+        <p>Oct. 4 to 5, 2025</p>
+
+        <p>Contact <a href="mailto:lars.schmith@gmail.com">lars.schmith@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong and Simplified Tai Chi</p>
+
+      </div>
+
+
+
+      <a href="#upstate" class="animated_popup">
+
+        <h1>Upstate New York</h1>
+
+      </a>
+
+      <h2>Nov. 6th to 9th 2025</h2>
+
+      <div id="upstate" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Upstate New York</h3>
+
+        <p>Nov. 6th to 9th 2025</p>
+
+        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Weapons, Energy work and Push Hands</p>
+
+      </div>
     </div>
   </section>
 
