--- a/workshops/index.html
+++ b/workshops/index.html
@@ -152,7 +152,7 @@
 
         <p>April. 11 to 13, 2025</p>
 
-        <p>Contact <a href="mailto:grace@taichiclub.com:">grace@taichiclub.com </a></p>
+        <p>Contact <a href="mailto:grace@taichiclub.com">grace@taichiclub.com </a></p>
 
         <p>Workshop content: Slow Forms, Fast Forms and Push Hands.</p>
 
@@ -223,7 +223,7 @@
 
       <a href="#cz11" class="animated_popup"> 
 
-        <h1></h1>
+        <h1>Lund, Sweden</h1>
 
       </a>
 
@@ -258,7 +258,7 @@
 
         <p>June 20 to 22, 2025</p>
 
-        <p>Contact<a href="mailto:">Lrbearg@gmail.com<a href="mailto:Lrbearg@gmail.com">Lrbearg@gmail.com</a></p>
+        <p>Contact <a href="mailto:Lrbearg@gmail.com">Lrbearg@gmail.com</a></p>
 
         <p>Workshop content: Tai Chi Fundamental Qigongs, Slow Forms, Push Hands and Fast Form.</p>
 
