--- a/workshops/index.html
+++ b/workshops/index.html
@@ -357,6 +357,8 @@
 
         <p>Workshop content: Fundamental Qigong and Simplified Tai Chi</p>
 
+        <p>visit <a href="https://qigongzen.dk/">https://qigongzen.dk/</a> for more info</p>
+
       </div>
 
 
